[REF] (purchase,sale)_stock, mrp: use horizon_days
Remove visibility_days and replace it by horizon_days.
Also removing manufacturing_visibility_days and purchase_visibility_days.
horizon_days is a company setting where visibility_days was a system setting.
The default value for horizon_days is 365.
lead_days_date absorbs visibility_days_date and is now lead_horizon_date.

task 4779169

Part-of: odoo/odoo#217987
Related: odoo/enterprise#90534
Related: odoo/upgrade#8192
Signed-off-by: Tiffany Chang (tic) <tic@odoo.com>

--- a/addons/stock/views/res_config_settings_views.xml
+++ b/addons/stock/views/res_config_settings_views.xml
@@ -199,7 +199,10 @@
                                 </div>
                             </setting>
                         </block>
-                        <block title="Advanced Scheduling" id="schedule_info" invisible="1">
+                        <block title="Advanced Scheduling" id="schedule_info">
+                            <setting company_dependent="1" help="Configure your horizon to trigger reordering rules earlier to get a head start on replenishment and avoid delays, or trigger it just-in-time ('0 days') to avoid overstocking.">
+                                <field name="horizon_days" class="oe_inline"/><span> days</span>
+                            </setting>
                             <div id="sale_security_lead"/>
                             <div id="purchase_po_lead"/>
                         </block>
