[IMP] mail, crm: add rotting logic & fields
This commit introduces new logic to the duration tracking mixin.

The rotting logic allows users to get a better sense of when a
resource gets stale. If the logic is activated for a model,
then when its resouces spend too long without seeing stage advancement
(date_last_stage_update), they will be marked as "rotting".

This commit also adds a new custom view for Kanban views; when it is
used in conjunction with the rotting logic, then rotting elements will
appear in a different color in kanban views, highlighting them
and bringing them to attention.

Field widgets for form and kanban views, and view widgets for
list views, also add additional indicators on rotting resources.

This commit makes all necessary modifications to apply the rotting
logic to the CRM module.

task-4684660

--- a/addons/crm/views/crm_lead_views.xml
+++ b/addons/crm/views/crm_lead_views.xml
@@ -15,7 +15,7 @@
                             invisible="won_status != 'lost'"/>
                         <button name="%(crm.crm_lead_lost_action)d" string="Lost" type="action" data-hotkey="l" title="Mark as lost"
                             invisible="won_status != 'pending' or not active"/>
-                        <field name="stage_id" widget="statusbar_duration"
+                        <field name="stage_id" widget="rotting_statusbar_duration"
                             options="{'clickable': '1', 'fold_field': 'fold'}"
                             domain="['|', ('team_id', '=', team_id), ('team_id', '=', False)]"
                             invisible="type == 'lead'" readonly="won_status == 'lost' or not active"/>
@@ -24,6 +24,8 @@
                         <field name="won_status" invisible="1"/>
                         <field name="active" invisible="1"/>
                         <field name="company_id" invisible="1"/>
+                        <field name="is_rotting" invisible="1"/>
+                        <field name="rotting_days" invisible="1"/>
                         <div class="oe_button_box" name="button_box">
                             <button name="action_schedule_meeting" type="object"
                                 class="oe_stat_button" icon="fa-calendar"
@@ -47,8 +49,12 @@
                         <widget name="web_ribbon" title="Archived" bg_color="text-bg-danger" invisible="active or won_status in ['lost', 'won']"/>
                         <widget name="web_ribbon" title="Lost" bg_color="text-bg-danger" invisible="won_status != 'lost'"/>
                         <widget name="web_ribbon" title="Won" invisible="won_status != 'won'"/>
-                        <div class="oe_title">
-                            <h1><field class="text-break" options="{'line_breaks': False}" widget="text" name="name" placeholder="e.g. Product Pricing"/></h1>
+                        <div class="oe_title mw-100">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <h1 class="flex-grow-1">
+                                    <field class="text-break" options="{'line_breaks': False}" widget="text" name="name" placeholder="e.g. Product Pricing"/>
+                                </h1>
+                            </div>
                             <h2 class="row g-0 pb-3 pb-sm-4">
                                 <div class="col-auto pb-2 pb-md-0 w-100 w-sm-auto" invisible="type == 'lead'">
                                     <label for="expected_revenue" class="oe_edit_only"/>
@@ -112,7 +118,6 @@
                                         'default_team_id': team_id,
                                         'default_website': website,
                                         'default_lang': lang_code,
-                                        'show_vat': True
                                     }" invisible="not is_partner_visible"/>
                                 <field name="partner_name"/>
                                 <label for="street" string="Address"/>
@@ -574,7 +579,7 @@
                                     <field name="recurring_plan" groups="crm.group_use_recurring_revenues"/>
                                 </t>
                             </div>
-                            <field name="partner_id" class="text-truncate" />
+                            <field name="partner_id" class="ms-2 text-truncate" />
                             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                             <field name="lead_properties" widget="properties"/>
                             <footer class="pt-1">
@@ -582,7 +587,11 @@
                                     <field name="priority" widget="priority" groups="base.group_user" class="me-2"/>
                                     <field name="activity_ids" widget="kanban_activity"/>
                                 </div>
-                                <field name="user_id" widget="many2one_avatar_user" domain="[('share', '=', False)]" class="ms-auto"/>
+                                <div class="ms-auto d-flex">
+                                    <field name="is_rotting" invisible="1"/>
+                                    <field name="rotting_days" class="d-flex" widget="rotting"/>
+                                    <field name="user_id" widget="many2one_avatar_user" domain="[('share', '=', False)]" class="ms-2"/>
+                                </div>
                             </footer>
                         </t>
                     </templates>
@@ -775,7 +784,7 @@
                         options="{'currency_field': 'company_currency'}" groups="crm.group_use_recurring_revenues"/>
                     <field name="recurring_plan" optional="hide" groups="crm.group_use_recurring_revenues"/>
                     <field name="stage_id_color" column_invisible="1"/>
-                    <field name="stage_id" optional="show" widget="selection_badge" options="{'color_field': 'stage_id_color'}"/>
+                    <field name="stage_id" optional="show" widget="badge_rotting" options="{'color_field': 'stage_id_color'}"/>
                     <field name="active" column_invisible="True"/>
                     <field name="probability" string="Probability (%)" optional="hide"/>
                     <field name="lost_reason_id" optional="hide"/>
@@ -783,6 +792,8 @@
                     <field name="referred" column_invisible="True"/>
                     <field name="message_needaction" column_invisible="True"/>
                     <field name="lead_properties"/>
+                    <field name="is_rotting" column_invisible="True"/>
+                    <field name="rotting_days" column_invisible="True"/>
                     <widget name="mail_activity_mixin_list_reschedule_dropdown"/>
                     <button name="%(crm.action_lead_mail_compose)d" type="action" string="Email" icon="fa-envelope"/>
                 </list>
@@ -984,6 +995,7 @@
                     <filter string="Won" name="filter_won_status_won" domain="[('won_status', '=', 'won')]"/>
                     <!-- For ongoing: include 'active' as this filter is functional and should filter out archived leads -->
                     <filter string="Ongoing" name="filter_won_status_pending" domain="[('won_status', '=', 'pending'), ('active', '=', True)]"/>
+                    <filter string="Rotting" name="filter_rotting" domain="[('is_rotting', '=', True)]"/>
                     <filter string="Lost" name="filter_won_status_lost" domain="[('won_status', '=', 'lost'), ('active', '=', False)]"/>
                     <separator/>
                     <filter invisible="1" string="Overdue Opportunities" name="overdue_opp" domain="['&amp;', ('date_closed', '=', False), ('date_deadline', '&lt;', 'today')]"/>
