[IMP] web, web_editor: adapt outline btn contrast
This commit adjusts the color contrast of outline buttons to ensure they
remain readable regardless of the colors chosen in the web editor.

task-4904868

--- a/addons/web/static/src/scss/bootstrap_review_frontend.scss
+++ b/addons/web/static/src/scss/bootstrap_review_frontend.scss
@@ -74,7 +74,7 @@ $o-btn-border-colors: () !default;
 }
 @each $color, $value in $theme-colors {
     $-bg-color: map-get($o-btn-bg-colors, $color) or $value;
-    $-border-color: map-get($o-btn-border-colors, $color) or $-bg-color;
+    $-border-color: increase-contrast(map-get($o-btn-border-colors, $color) or $-bg-color, $body-bg);
     .btn-outline-#{$color} {
         @include button-outline-variant($-border-color);
     }
