--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -697,21 +697,23 @@ pre {
             // Primary
             $-btn-primary-color: if($-btn-primary, o-color($-btn-primary), map-get($theme-colors, 'primary'));
             $-btn-primary-border-color: if($-btn-primary-border, o-color($-btn-primary-border), $-btn-primary-color);
+            $-btn-primary-outline-color: increase-contrast($-btn-primary-border-color, $-bg-color);
             .btn-fill-primary {
                 @include button-variant($-btn-primary-color, $-btn-primary-border-color);
             }
             .btn-outline-primary {
-                @include button-outline-variant($-btn-primary-border-color);
+                @include button-outline-variant($-btn-primary-outline-color);
             }
 
             // Secondary
             $-btn-secondary-color: if($-btn-secondary, o-color($-btn-secondary), map-get($theme-colors, 'secondary'));
             $-btn-secondary-border-color: if($-btn-secondary-border, o-color($-btn-secondary-border), $-btn-secondary-color);
+            $-btn-secondary-outline-color: increase-contrast($-btn-secondary-border-color, $-bg-color);
             .btn-fill-secondary {
                 @include button-variant($-btn-secondary-color, $-btn-secondary-border-color);
             }
             .btn-outline-secondary {
-                @include button-outline-variant($-btn-secondary-border-color);
+                @include button-outline-variant($-btn-secondary-outline-color);
             }
 
             // 'Active' states. Note: this only emulates very common components
