--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -591,11 +591,12 @@
             <field name="model">mrp.production</field>
             <field eval="2" name="priority"/>
             <field name="arch" type="xml">
-                <calendar date_start="date_start" date_stop="date_finished"
-                          string="Manufacturing Orders" event_limit="5" quick_create="0">
+                <calendar js_class="mrp_calendar" date_start="date_start" date_stop="date_finished"
+                          string="Manufacturing Orders" event_limit="5" quick_create="0" color="product_id" hide_time="True">
                     <field name="user_id" avatar_field="avatar_128"/>
                     <field name="product_id"/>
                     <field name="product_qty"/>
+                    <field name="product_uom_id" invisible="1"/>  <!-- To show the unit next to the quantity -->
                 </calendar>
             </field>
         </record>
