[IMP] web, html_editor: improve gradient color picker inputs and UX
Purpose of this commit:

- Replaced free text inputs with numeric `<input type="number">` fields for:
   - Radial gradient: Position X and Position Y
   - Linear gradient: Angle
- Enforced value constraints:
   - Angle: min 0, max 360
   - Position X and Position Y: min 0, max 100
- Added logic to clamp values beyond allowed limits.
- Reordered the `Size` section to appear before `Position`.
- Enlarged the gradient size buttons for better visual accessibility.
- Added spacing between the "Size" and "Position" sections.
- Removed the spinner UI on number inputs.

task-4952242

closes odoo/odoo#219868

Signed-off-by: David Monjoie (dmo) <dmo@odoo.com>

--- a/addons/web/static/src/core/color_picker/color_picker.scss
+++ b/addons/web/static/src/core/color_picker/color_picker.scss
@@ -12,6 +12,7 @@
 }
 
 .o_font_color_selector {
+    @include o-input-number-no-arrows();
     --bg: #{$o-we-toolbar-bg};
     --text-rgb: #{red($o-we-toolbar-color-text)}, #{green($o-we-toolbar-color-text)}, #{blue($o-we-toolbar-color-text)};
     --border-rgb: var(--text-rgb);
