[FIX] website_event{_track/exhibitor}: make event/track/sponser searchable for other languages
Issue:
- After odoo/odoo@777cb220259e1c1529b960761a6f59ec6115038e
we are not able to search for event/track/sponser when we have other language
selected except `en_US`.
This is because of how `search_type` attribute is set in related templates.
currently it gets translated as according to  website's language,
for e.g when website's language is `Spanish (AR) / Español (AR)`
'events' get translated to 'eventos' and
'track' get translated to 'sesión'
hence the parameter for search get altered, failing the search.

step to reproduce:
- Add another language except en_US, say ,spanish
- install website_event
- open events from website and switch language to spanish
- search for event

Observation:
- No search result

Fix:
- set the translation off using `t-translation="off"`

opw-4972519

--- a/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
+++ b/addons/website_event_exhibitor/views/event_exhibitor_templates_list.xml
@@ -40,7 +40,7 @@
         <div class="d-flex w-100 w-lg-auto">
             <t t-call="website.website_search_box_input">
                 <t t-set="_classes" t-valuef="o_wevent_event_sponsor_searchbar_form flex-grow-1"/>
-                <t t-set="search_type">sponsor</t>
+                <t t-set="search_type" t-translation="off">sponsor</t>
                 <t t-set="action" t-value="'/event/%s/exhibitors' % (slug(event))"/>
                 <t t-set="display_detail" t-valuef="false"/>
                 <t t-set="search" t-value="search or searches and searches['search']"/>
