[IMP] event: make non-reusable questions
Previously, questions were reusable by events and by event templates. This
commit adds the is_reusable attribute on the event.question model to avoid
questions to be used by events or event templates to which they are not yet
linked. If a question is no longer reusable, it can no longer be selected in
the event or event template forms. This allows to have questions linked to a
single event. By default, question are reusable.

Filters have been added to the question list view allowing users to search for
reusable and non-reusable questions.

Upgrade PR: https://github.com/odoo/upgrade/pull/7153

Task-4247015

Part-of: odoo/odoo#195611
Related: odoo/upgrade#7153
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/event/views/event_event_views.xml
+++ b/addons/event/views/event_event_views.xml
@@ -114,7 +114,7 @@
                             </field>
                         </page>
                          <page string="Questions" name="questions">
-                            <field name="question_ids" string="Question" nolabel="1">
+                            <field name="question_ids" string="Question" nolabel="1" domain="[('is_reusable', '=', True)]" context="{'list_view_ref': 'event.event_question_view_list_add'}">
                                 <list>
                                     <field name="sequence" widget="handle" />
                                     <field name="title"/>
@@ -124,6 +124,7 @@
                                     <field name="answer_ids" widget="many2many_tags"
                                         invisible="question_type != 'simple_choice'" />
                                     <field name="is_default" optional="hide"/>
+                                    <field name="is_reusable" optional="hide"/>
                                     <button name="action_view_question_answers"
                                         type="object"
                                         class="p-0"
