--- a/addons/event/views/event_type_views.xml
+++ b/addons/event/views/event_type_views.xml
@@ -50,7 +50,7 @@
                            </field>
                        </page>
                         <page string="Questions" name="page_questions">
-                            <field name="question_ids" class="w-100">
+                            <field name="question_ids" class="w-100" domain="[('is_reusable', '=', True)]" context="{'list_view_ref': 'event.event_question_view_list_add'}">
                                 <list sample="1">
                                     <field name="title"/>
                                     <field name="is_mandatory_answer" string="Mandatory"/>
@@ -58,6 +58,7 @@
                                     <field name="question_type" />
                                     <field name="answer_ids" widget="many2many_tags" invisible="question_type != 'simple_choice'"/>
                                     <field name="is_default" optional="hide"/>
+                                    <field name="is_reusable" optional="hide"/>
                                 </list>
                             </field>
                         </page>
