[IMP] event: allow defaut questions creation
This commit allows the creation of default questions for the events.
Previously, three default questions were stored by default. When those were
not suitable as default questions for users, they have to remove them all from
the new events and add new questions instead. With this commit, in this case,
it is not needed anymore, they can select the other default questions for their
events. However, the three default questions are still stored in bd and are
used default, but users can use them like regular questions if they wished.

Upgrade PR: https://github.com/odoo/upgrade/pull/7153

Task-4247015

--- a/addons/event/views/event_event_views.xml
+++ b/addons/event/views/event_event_views.xml
@@ -123,6 +123,7 @@
                                     <field name="question_type" string="Type" />
                                     <field name="answer_ids" widget="many2many_tags"
                                         invisible="question_type != 'simple_choice'" />
+                                    <field name="is_default" optional="hide"/>
                                     <button name="action_view_question_answers"
                                         type="object"
                                         class="p-0"
