--- a/addons/event/views/event_question_views.xml
+++ b/addons/event/views/event_question_views.xml
@@ -21,6 +21,8 @@
                 <filter string="For each attendee"
                         name="filter_for_each_attendee"
                         domain="[('once_per_order', '=', False)]"/>
+                <separator/>
+                <filter name="filter_is_default" string="Default Questions" domain="[('is_default', '=', True)]"/>
                 <group>
                     <filter string="Event" name="group_by_event" context="{'group_by': 'event_ids'}"/>
                 </group>
@@ -50,6 +52,7 @@
                         </group>
                         <group>
                             <field name="once_per_order"/>
+                            <field name="is_default"/>
                         </group>
                     </group>
                     <notebook invisible="question_type != 'simple_choice'">
@@ -80,6 +83,7 @@
                 <field name="question_type" string="Type"/>
                 <field name="answer_ids" widget="many2many_tags"
                     invisible="question_type != 'simple_choice'"/>
+                <field name="is_default"/>
             </list>
         </field>
     </record>
