--- a/addons/event/views/event_type_views.xml
+++ b/addons/event/views/event_type_views.xml
@@ -57,6 +57,7 @@
                                     <field name="once_per_order" string="Once per Order"/>
                                     <field name="question_type" />
                                     <field name="answer_ids" widget="many2many_tags" invisible="question_type != 'simple_choice'"/>
+                                    <field name="is_default" optional="hide"/>
                                 </list>
                             </field>
                         </page>
