--- a/addons/google_gmail/views/fetchmail_server_views.xml
+++ b/addons/google_gmail/views/fetchmail_server_views.xml
@@ -16,20 +16,14 @@
                     </span>
                     <button type="object"
                         name="open_google_gmail_uri" class="btn-link px-0"
-                        invisible="not google_gmail_uri or server_type != 'gmail' or google_gmail_refresh_token">
+                        invisible="server_type != 'gmail' or google_gmail_refresh_token">
                         <i class="oi oi-arrow-right"/>
                         Connect your Gmail account
                     </button>
                     <button type="object"
                         name="open_google_gmail_uri" class="btn-link px-0 ms-2"
-                        invisible="not google_gmail_uri or server_type != 'gmail' or not google_gmail_refresh_token">
+                        invisible="server_type != 'gmail' or not google_gmail_refresh_token">
                         <i class="fa fa-cog" title="Edit Settings"/>
-                    </button>
-                    <button class="alert alert-warning d-block mt-2 text-start"
-                        icon="oi-arrow-right" type="action" role="alert"
-                        name="%(base.res_config_setting_act_window)d"
-                        invisible="server_type != 'gmail' or google_gmail_uri">
-                        Setup your Gmail API credentials in the general settings to link a Gmail account.
                     </button>
                 </div>
             </field>
